# Analyst

./: README.md  main.py  pyproject.toml
backend/: .env  main.py  requirements.txt
backend/agents/: analyst_agent.py
backend/routes/: agent_router.py  downloading_router.py  upload_router.py
backend/tools/: cleaning_data_tool.py  quality_checking_tool.py  upload_tool_data.py
