[project]
name = "analyst-iq"
version = "0.1.0"
description = "Interactive AutoML and AI-powered conversational data analyst"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "flaml[automl]>=2.6.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
